[Cairo] fast/canvas/canvas-imageSmoothingFoo tests failed after r190383. https://bugs.webkit.org/show_bug.cgi?id=149752

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-10-06
Reviewed by Carlos Garcia Campos.

CG's low interpolation quality setting is equivalent to most other browsers default or high settings.

Source/WebCore:

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::State::State):

LayoutTests:

* platform/efl/fast/canvas/canvas-imageSmoothingQuality-expected.txt: Added.
* platform/gtk/fast/canvas/canvas-imageSmoothingQuality-expected.txt: Added.

Canonical link: https://commits.webkit.org/167966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190618 268f45cc-cd09-0410-ab3c-d52691b4dbfc